# Scrabble-game-with-basic-AI

./: CMakeLists.txt
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  main.cpp
